Added ContextFactory and test

--- a/AH.Lib/AH.Lib.csproj
+++ b/AH.Lib/AH.Lib.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.NamingConventions" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AH.Model\AH.Model.csproj" />
   </ItemGroup>
 
