--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,4 @@ steps:
   inputs:
     command: 'test'
     projects: '**/AH.Test*.csproj'
-    arguments: '--verbosity detailed'
+    arguments: '--verbosity normal'
